--- a/views/relation_guide.tmpl
+++ b/views/relation_guide.tmpl
@@ -1,4 +1,5 @@
-# 关系建模指南
+{% block docTitle %}{% endblock %}
+
 数据对象之间存在 3 种类型的关系。一对一关系可以将一个对象与另一个对象关联。一对多关系可以使一个对象关联多个对象。多对多关系可以实现大量对象之间的复杂关系。
 
 ## LeanCloud 中的关系
@@ -17,87 +18,39 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 
 {% block postPointToAVUser %}{% endblock %}
 
-```objc
-AVObject *post= [AVObject objectWithClassName:@"Post"];
-[post setObject:[AVUser currentUser] forKey:@"potedBy"];
-```
-
 我们可以使用下面的代码来查询某个 AVUser 创建的 `Post` 对象：
 
-```objc
-AVQuery *postQuery = [AVQuery queryWithClassName:@"Post"];
-[postQuery whereKey:@"potedBy" equalTo:[AVUser currentUser]];
-```
+{% block queryPostByAVUser %}{% endblock %}
 
 如果我们需要查询某个 `Post` 对象的创建者，也就是获取 `potedBy ` 属性：
 
-```objc
-// 假定我们已经从服务端 fetch 了一个 Post 对象
-AVObject *post = ...
- 
-// 获取 Post 对象的发送者
-AVUser *postedBy = [post objectForKey@"postedBy"];
-```
+{% block queryCreaterForPost %}{% endblock %}
 
 大多数场景下，Pointers 是实现一对多关系的最好选择。
 
 ### 使用 Arrays 实现一对多关系
 当我们知道一对多关系中包含的对象数量很小时，使用 Arrays 实现是比较理想的。Arrays 可以通过 `includeKey` 简化查询。传递对应的 key 可以在获取「一」方对象数据的同时获取到所有「多」方对象的数据。但是，如果关系中包含的对象数量巨大，查询将响应缓慢。
 
-假设在我们的游戏中，玩家需要保存角色游戏过程中积累的所有武器，且总共有几十种武器。在这个实例中我们知道武器的数量不会变得很大。同时，我们还想允许玩家设定武器的顺序。这种情况正好适合用 Arrays 实现，因为数组的大小不会很大，而且还需要保存玩家每次游戏后数组内元素的顺序：
+假设在我们的微博系统中，我们想保存用户关注的话题列表，这样可以方便用户根据话题关键字直接搜索相关的微博。这种情况正好适合用 Arrays 实现，而且还需要保存用户每次修改后数组内元素的顺序，方便用户随时修改自己关注的话题的优先级：
 
-我们可以在 AVUser 上创建添加一列`weaponsList`。
+我们可以在 AVUser 上创建添加一列 `topicList`。
 
-现在我们存入一些`Weapon`对象到`weaponsList`中：
+现在我们存入一些 `Topic` 对象到 `topicList` 中：
 
-```objc
-// let's say we have four weapons
-AVObject *scimitar = ...
-AVObject *plasmaRifle = ...
-AVObject *grenade = ...
-AVObject *bunnyRabbit = ...
- 
-// stick the objects in an array
-NSArray *weapons = @[scimitar, plasmaRifle, grenade, bunnyRabbit];
- 
-// store the weapons for the user
-[[AVUser currentUser] setObject:weapons forKey:@"weaponsList"];
-```
+{% block addTopicListToAVUser %}{% endblock %}
 
-然后，如果我们需要获取这些`Weapon`对象，仅仅需要一行代码：
+然后，如果我们需要获取这些 `Topic` 对象，仅仅需要一行代码：
 
-```objc
-NSArray *weapons = [[AVUser currentUser] objectForKey:@"weaponsList"];
-```
+{% block addTopicListToAVUser %}{% endblock %}
 
-有时候，我们会想获取我们一对多中「一」的对象的同时获取「多」的对象。我们可以在使用 AVQuery 查询 AVUser 的时候，使用`includeKey`（或 Android 中的`include`）来同时获取`weaponsList`列中存放的`Weapon`对象：
+有时候，我们会想获取我们一对多中「一」的对象的同时获取「多」的对象。我们可以在使用 AVQuery 查询 AVUser 的时候，使用 `includeKey`（或 Android 中的`include`）来同时获取 `topicList` 列中存放的 `Topic` 对象：
 
-```objc
-// set up our query for a User object
-AVQuery *userQuery = [AVUser query];
- 
-// configure any constraints on your query...
-// for example, you may want users who are also playing with or against you
- 
-// tell the query to fetch all of the Weapon objects along with the user
-// get the "many" at the same time that you're getting the "one"
-[userQuery includeKey:@"weaponsList"];
- 
-// execute the query
-[userQuery findObjectsInBackgroundWithBlock:^(NSArray *objects, NSError *error) {
-    // objects contains all of the User objects, and their associated Weapon objects, too
-}];
-```
+{% block queryIncludeTopicList %}{% endblock %}
+
 
 你也可以在一对多关系中通过「多」方对象获取到「一」方对象。例如，我们想找出所有拥有某个特定`Weapon`的 AVUser，可以像这样来查询：
 
-```objc
-// add a constraint to query for whenever a specific Weapon is in an array
-[userQuery whereKey:@"weaponsList" equalTo:scimitar];
- 
-// or query using an array of Weapon objects...
-[userQuery whereKey:@"weaponsList" containedIn:arrayOfWeapons];
-```
+{% block queryAVUserContainsTopic %}{% endblock %}
 
 ## 多对多关系
 现在让我们来处理多对多关系。假设我们有一个读书应用，我们需要对`Book`对象和`Author`对象建模。如我们所知，一个作者可以写多本书，一本书也可以有多个作者。这是一个典型的多对多关系，你必须选择使用 Arrays， AVRelation 或创建自己的关联表来实现这种关系。
@@ -111,61 +64,20 @@ AVQuery *userQuery = [AVUser query];
 * 某人查看此关系的次数
 
 ### 使用 AVRelation
-我们可以使用 AVRelation 构建一个`Book`和`Author`之间的关系。在后台的数据查看界面，你可以给 Book 对象添加一个名称为`authors`，类型为 relation 的列。
+我们可以使用 AVRelation 构建一个 `Student` 和 `Course` 之间的关系。
+一个学生可以学习「多」门课程，一门课程也可以拥有「多」个学生。
 
-然后，我们可以关联一些作者到这本书：
+然后，我们可以为一个：
 
-```objc
-// let’s say we have a few objects representing Author objects
-AVObject *authorOne = …
-AVObject *authorTwo = …
-AVObject *authorThree = …
+{% block studentAVRelationCourse %}{% endblock %}
 
-// now we create a book object
-AVObject *book= [AVObject objectWithClassName:@"Book"];
- 
-// now let’s associate the authors with the book
-// remember, we created a "authors" relation on Book
-AVRelation *relation = [book relationforKey:@"authors"];
-// make sure these objects should be saved to server before adding to relation
-[relation addObject:authorOne];
-[relation addObject:authorTwo];
-[relation addObject:authorThree];
- 
-// now save the book object
-[book saveInBackground];
-```
+要获取某个课程的学生，使用如下查询：
 
-** 注意： ** 这里 authorOne, authorTwo, authorThree 必需已经保存到云端之后才能添加到 relation，否则 [book saveInBackground] 会报错。
+{% block queryStudentByCourse %}{% endblock %}
 
-要获取某本书的所有作者，使用如下查询：
+也许你更需要获取某个学生学习的所有的课程。你可以构造一个稍微不同的查询来获取这种反向关系的结果：
 
-```objc
-// suppose we have a book object
-AVObject *book = ...
- 
-// create a relation based on the authors key
-AVRelation *relation = [book relationforKey:@"authors"];
- 
-// generate a query based on that relation
-AVQuery *query = [relation query];
- 
-// now execute the query
-```
-
-也许你更需要获取某个作者的所有书。你可以构造一个稍微不同的查询来获取这种反向关系的结果：
-
-```objc
-// suppose we have a author object, for which we want to get all books
-AVObject *author = ...
- 
-// first we will create a query on the Book object
-AVQuery *query = [AVQuery queryWithClassName:@"Book"];
- 
-// now we will query the authors relation to see if the author object 
-// we have is contained therein
-[query whereKey:@"authors" equalTo:author];
-```
+{% block queryCoursesByStudent %}{% endblock %}
 
 ### 使用关联表
 也许某些情况下，我们需要知道更多关系的附加信息。例如，假设我们为用户之间关注/被关注的关系建模：就像流行的社交网络那样，一个用户可以关注别的用户。在我们的应用里，我们不仅想知道用户 A 是否关注了用户 B，我们还想知道什么时候用户 A 开始关注的用户 B。这样的信息不能使用 AVRelation 实现。为了保存这些数据，你必须创建一个独立的表保存这些关系。这个表我们叫做`Follow`，它有一例叫`from`和一例叫`to`，都是 AVUser 的指针类型。除此之外，你还要添加一列名称为`date`，类型为`Date`的列。
