--- a/views/relation_guide.tmpl
+++ b/views/relation_guide.tmpl
@@ -80,123 +80,44 @@ LeanCloud中 有 4 种方式构建对象之间的关系：
 {% block queryCoursesByStudent %}{% endblock %}
 
 ### 使用关联表
-也许某些情况下，我们需要知道更多关系的附加信息。例如，假设我们为用户之间关注/被关注的关系建模：就像流行的社交网络那样，一个用户可以关注别的用户。在我们的应用里，我们不仅想知道用户 A 是否关注了用户 B，我们还想知道什么时候用户 A 开始关注的用户 B。这样的信息不能使用 AVRelation 实现。为了保存这些数据，你必须创建一个独立的表保存这些关系。这个表我们叫做`Follow`，它有一例叫`from`和一例叫`to`，都是 AVUser 的指针类型。除此之外，你还要添加一列名称为`date`，类型为`Date`的列。
+也许某些情况下，我们需要知道更多关系的附加信息。比如学生选课的系统中，如果你想知道学生何时选修的这门课，或者想知道学生选修是通过手机选修还是通过网站操作的，这个时候单独使用 `AVRelation` 就无法满足需求，因为 `AVRelation` 不支持额外的自定义属性，此时我们可以使用传统的数据库设计方法：关联表。
 
-现在，当你要保存两个用户之间的关注关系时，在`Follow`表添加一行，给`from`，`to`和`date`填充恰当的数据：
+为了实现这个需求，我们创建一个独立的表保存 `Student` 和 `Course` 的关系，暂且叫做 `CourseChoosing` 的表，然后它有以下几个字段：
 
-```objc
-// suppose we have a user we want to follow
-AVUser *otherUser = ...
- 
-// create an entry in the Follow table
-AVObject *follow = [AVObject objectWithClassName:@"Follow"];
-[follow setObject:[AVUser currentUser]  forKey:@"from"];
-[follow setObject:otherUser forKey:@"to"];
-[follow setObject:[NSDate date] forKey:@"date"];
-[follow saveInBackground];
 ```
-
-如果我们想查询所有当前用户关注的用户，我们可以对`Follow`表使用这样的查询：
-
-```objc
-// set up the query on the Follow table
-AVQuery *query = [AVQuery queryWithClassName:@"Follow"];
-[query whereKey:@"from" equalTo:[AVUser currentUser]];
- 
-// execute the query
-[query findObjectsInBackgroundWithBlock:^(NSArray *objects, NSError *error) {
-  for(AVObject *o in objects) {
-    // o is an entry in the Follow table
-    // to get the user, we get the object with the to key
-    AVUser *otherUser = [o objectForKey:@"to"];
- 
-    // to get the time when we followed this user, get the date key
-    NSDate *when = [o objectForKey:@"date"];
-  }
-}];
+1.course ： Course 指针实例
+2.student： Student 指针实例
+3.date：选修的时间，Date 类型
+4.platform：操作时使用的设备，String 类型
 ```
+如此，实现选修功能的代码如下：
 
-同样，我们也可以很简单地查询所有关注当前用户的用户，我们可以对`Follow`表使用这样的查询：
+{% block relationTableStudentCourse %}{% endblock %}
 
-```objc
-// set up the query on the Follow table
-AVQuery *query = [AVQuery queryWithClassName:@"Follow"];
-[query whereKey:@"to" equalTo:[AVUser currentUser]];
- 
-// execute the query
-[query findObjectsInBackgroundWithBlock:^(NSArray *objects, NSError *error) {
-  for(AVObject *o in objects) {
-    // o is an entry in the Follow table
-    // to get the user, we get the object with the from key
-    AVUser *otherUser = [o objectForKey:@"from"];
- 
-    // to get the time the user was followed, get the date key
-    NSDate *when = [o objectForKey:@"date"];
-  }
-}];
-```
+如果我想查询选修了某一课程的所有学生，可以进行如下查询：
+
+{% block relationTableQueryStudentInCourse %}{% endblock %}
+
+同样，我们也可以很简单地查询某一个学生选修的所有课程：
+
+{% block relationTableQueryCourseOfStudent %}{% endblock %}
 
 ### 使用 Arrays 实现多对多关系
 使用 Arrays 实现多对多关系跟实现一对多关系大致相同。关系中一方的所有对象拥有一个数组列包含一些关系另一方的对象。
 
-假设我们一个读书应用拥有`Book`和`Author`对象。`Book`对象包含一个`Author`对象的数组（使用列名`authors`）。使用 Arrays 实现非常适合这样的场景，因为一本书几乎不可能达到或超过 100 个作者。这是我们在`Book`对象中使用数组的原因。毕竟，一个作者可能写 100 本以上的书。
+假如我们开发一个社交类的应用，每一个注册的用户可以标注自己喜欢的异性的类型（Tag），我们知道一个正常的用户感兴趣的类型是有限的，比如贝克汉姆可能会喜欢 `Hot`、`Sexy`的，贾斯丁比伯可能喜欢 `Foolish`、`Nonage`，使用 Arrays 实现就非常符合这样的场景，我们只要在用户表添加一个数组字段记录用户关注的类型（FocusTags）。
 
-这是我们怎么保存`Book`对象和`Author`对象之间的关系：
+以下代码演示用户注册成功之后，添加自己关注的类型:
 
-```objc
-// let's say we have an author
-AVObject *author = ...
- 
-// and let's also say we have an book
-AVObject *book = ...
- 
-// add the author to the authors list for the book
-[book addObject:author forKey:@"authors"];
-```
+{% block addFocusTagsForAVUserUsingArray %}{% endblock %}
 
-因为作者列表使用的数组，当你获取一个`Book`对象的时候想要同时得到所有作者的信息，则要使用`includeKey`（Android上是`include`）：
+当一个用户想查看自己目前关注了类型的时候，则在查询的时候需要使用 `include` 操作来获取对应的数组值： 
 
-```objc
-// set up our query for the Book object
-AVQuery *bookQuery = [AVQuery queryWithClassName:@"Book"];
- 
-// configure any constraints on your query...
-// tell the query to fetch all of the Author objects along with the Book
-[bookQuery includeKey:@"authors"];
- 
-// execute the query
-[bookQuery findObjectsInBackgroundWithBlock:^(NSArray *objects, NSError *error) {
-    // objects is all of the Book objects, and their associated 
-    // Author objects, too
-}];
-```
+{% block queryFocusTagsForAVUserUsingInclude %}{% endblock %}
 
-这样之后，获取某个`Book`对象的所有`Author`对象很简单：
+假如想搜索所有关注了 `Hot` 类型的用户，可以如下操作。
 
-```objc
-NSArray *authorList = [book objectForKey@"authors"];
-```
-
-最后，假设你有一个`Author`对象，你需要找出所有他出现过的`Book`对象，这也很简单，只需要添加一个条件：
-
-```objc
-// suppose we have an Author object
-AVObject *author = ...
- 
-// set up our query for the Book object
-AVQuery *bookQuery = [AVQuery queryWithClassName:@"Book"];
- 
-// configure any constraints on your query...
-[bookQuery whereKey:@"authors" equalTo:author];
- 
-// tell the query to fetch all of the Author objects along with the Book
-[bookQuery includeKey:@"authors"];
- 
-// execute the query
-[bookQuery findObjectsInBackgroundWithBlock:^(NSArray *objects, NSError *error) {
-    // objects is all of the Book objects, and their associated Author objects, too
-}];
-```
+{% block queryAVUserFocusHotTag %}{% endblock %}
 
 ## 一对一关系
 当你需要将一个对象拆分成两个对象时，一对一关系是一种重要的需求。这种需求应该很少见，但是在下面的实例中体现了这样的需求：
